Fixed logo overlay and other horizontal scrolling

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -138,7 +138,7 @@ button.btn.btn-lang:focus {
 //Navbar brand
 #nav-bar .navbar-brand {
   color: white;
-  padding-left: 3vw;
+  padding-left: 40px;
   font: bold 30px Poppins, sans-serif;
 }
 #logo-image{
@@ -1026,6 +1026,13 @@ div.social-media a icon{
   font-size: 50px;
 }
 
+@media screen and (max-width: 400px){
+  .wrapper #main-info h1 {
+    
+    font-size: 40px;
+  }
+}
+
 .wrapper #main-info h1:not(:first-child), .wrapper #main-info h2 {
   padding-bottom: 10px;
   padding-top: 50px;
@@ -1033,9 +1040,7 @@ div.social-media a icon{
   color: $dark;
 }
 
-.wrapper #main-info h1 {
-  font-size: 50px;
-}
+
 
 .wrapper #main-info h2 {
   font-size: 30px;
